<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_new">
    <ImageView
        android:id="@+id/image_logo_top"
        android:layout_alignParentTop="true"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/ic_resa_logo"
        android:background="@color/white_color"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_logo_top"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/text_name_and_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_size_body"
            android:text="@string/name_and_position"
            android:textStyle="bold"
            android:textColor="@color/white_color"
            />
        <TextView
            android:id="@+id/text_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_name_and_position"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_size_body"
            android:text="@string/text_intro"
            android:textStyle="bold"
            android:textColor="@color/orange_color"
            />
        <TextView
            android:id="@+id/text_hr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_intro"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_size_body"
            android:text="@string/hr_text"
            android:textStyle="bold"
            android:textColor="@color/white_color"
            />
        <TextView
            android:id="@+id/text_weblink_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_hr"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_size_body"
            android:text="@string/web_title_text"
            android:textStyle="bold"
            android:textColor="@color/orange_color"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_web1"
            android:layout_below="@+id/text_weblink_title"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:id="@+id/text_weblink1_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_body"
                android:text="@string/web1_content"
                android:textStyle="bold"
                android:textColor="@color/white_color"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weblink1"
                android:textColor="@color/white_color"
                android:text="@string/web1"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_web2"
            android:layout_below="@+id/layout_web1"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/text_weblink2_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_body"
                android:text="@string/web2_content"
                android:textStyle="bold"
                android:textColor="@color/white_color"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weblink2"
                android:textColor="@color/white_color"
                android:text="@string/web2"
                />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>