<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/image_logo"
        android:orientation="vertical"
        android:background="@drawable/ic_bg_new">
        <TextView
            android:id="@+id/text_home_body"
            android:layout_below="@+id/text_home_title"
            android:layout_above="@+id/text_last_answer_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_size_body"
            android:text="@string/home_body"
            android:textColor="@color/white_color"
            />
        <TextView
            android:id="@+id/text_home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_size_title"
            android:text="@string/home_title"
            android:textStyle="bold"
            android:textColor="@color/white_color"
            />
        <TextView
            android:layout_above="@+id/btn_check_to_answer"
            android:id="@+id/text_last_answer_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textColor="@color/white_color"
            android:textStyle="bold"
            android:text="Time: "
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:layout_alignLeft="@+id/btn_check_to_answer"
            android:maxLines="1"
            />
        <Button
            style="@style/PersonalProfileButtonStyle"
            android:layout_alignParentBottom="true"
            android:padding="20dp"
            android:layout_marginBottom="25dp"
            android:id="@+id/btn_check_to_answer"
            android:layout_width="fill_parent"
            android:textColor="@color/white_color"
            android:background="@drawable/buttonshape"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/image_logo"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/ic_resa_logo" />
</RelativeLayout>