<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg_new"
    tools:context=".Login.Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        >
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/white_color"
            android:text="@string/sign_up_message"
            android:padding="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/editshape"
            android:layout_marginLeft="@dimen/padding_left"
            android:layout_marginRight="@dimen/padding_right"
            android:layout_marginTop="@dimen/padding_left"
            android:padding="2dp">

            <ImageView
                android:id="@+id/icon_username"
                android:src="@drawable/ic_username"
                android:layout_marginLeft="@dimen/padding_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                >

                <AutoCompleteTextView
                    android:id="@+id/edt_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/home_bg_color"
                    android:textColorHint="@color/white_color"
                    android:background="@null"
                    android:layout_margin="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/editshape"
            android:layout_marginLeft="@dimen/padding_left"
            android:layout_marginRight="@dimen/padding_right"
            android:layout_marginTop="@dimen/padding_left"
            android:padding="2dp">

            <ImageView
                android:id="@+id/icon_emailaddress"
                android:src="@drawable/ic_email"
                android:layout_marginLeft="@dimen/padding_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                >
                <EditText
                    android:id="@+id/edt_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/home_bg_color"
                    android:textColorHint="@color/white_color"
                    android:background="@null"
                    android:layout_margin="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/editshape"
            android:layout_marginLeft="@dimen/padding_left"
            android:layout_marginRight="@dimen/padding_right"
            android:layout_marginTop="@dimen/padding_left"
            android:padding="2dp">

            <ImageView
                android:id="@+id/icon_password"
                android:src="@drawable/ic_password"
                android:layout_marginLeft="@dimen/padding_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                >

                <EditText
                    android:id="@+id/edt_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/home_bg_color"
                    android:textColorHint="@color/white_color"
                    android:background="@null"
                    android:layout_margin="10dp"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@drawable/editshape"
            android:layout_marginLeft="@dimen/padding_left"
            android:layout_marginRight="@dimen/padding_right"
            android:layout_marginTop="@dimen/padding_left"
            android:padding="2dp">

            <ImageView
                android:id="@+id/icon_password_check"
                android:src="@drawable/ic_password"
                android:layout_marginLeft="@dimen/padding_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                >

                <EditText
                    android:id="@+id/edt_register_password_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/home_bg_color"
                    android:textColorHint="@color/white_color"
                    android:background="@null"
                    android:layout_margin="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textAlignment="center"
                android:padding="5dp"
                android:text="Creat account"
                android:textSize="16dp"
                android:background="@drawable/buttonshape"
                android:layout_weight="0.5"
                android:textColor="@color/white_color"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
            <Button
                android:id="@+id/btn_back_to_sign_in"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:padding="5dp"
                android:text="Sign In"
                android:textSize="16dp"
                android:background="@drawable/buttonshape"
                android:textColor="@color/white_color"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
