<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ic_bg_new"
    tools:context=".Login.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/login_title"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            >
        </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
          android:layout_marginTop="50dp"
          android:gravity="center"
        >
          <ImageView
              android:id="@+id/image_logo"
              android:layout_width="90dp"
              android:layout_height="90dp"
              android:src="@drawable/ic_launcher_orange" />
    </LinearLayout>

        <LinearLayout
            android:layout_above="@+id/layout_login_logo"
            android:layout_below="@id/login_title"
            android:gravity="center"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@drawable/editshape"
                android:layout_marginLeft="@dimen/padding_left"
                android:layout_marginRight="@dimen/padding_right"
                android:layout_marginTop="@dimen/padding_left"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/icon_email"
                    android:src="@drawable/ic_email"
                    android:layout_marginLeft="@dimen/padding_left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/home_bg_color"
                        android:textColorHint="@color/white_color"
                        android:background="@null"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@drawable/editshape"
                android:layout_marginLeft="@dimen/padding_left"
                android:layout_marginRight="@dimen/padding_right"
                android:layout_marginTop="@dimen/padding_left"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/icon_pass"
                    android:src="@drawable/ic_password"
                    android:layout_marginLeft="@dimen/padding_left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/home_bg_color"
                        android:textColorHint="@color/white_color"
                        android:singleLine="true"
                        android:background="@null"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:padding="10dp">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textAlignment="center"
                    android:layout_weight="0.5"
                    android:padding="5dp"
                    android:text="Login"
                    android:textSize="16dp"
                    android:textColor="@color/white_color"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/buttonshape"
                />
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textAlignment="center"
                    android:layout_weight="0.5"
                    android:padding="5dp"
                    android:text="Sign Up"
                    android:textSize="16dp"
                    android:textColor="@color/white_color"
                    android:background="@drawable/buttonshape"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">
                <CheckBox
                    android:padding="5dp"
                    android:layout_alignLeft="@+id/btn_login"
                    android:id="@+id/checkBox_remember_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_login"
                    android:layout_marginLeft="20dp"
                    android:text="  Remember Password"
                    android:button="@drawable/checkbox_selector"
                    android:textColor="@color/white_color" />

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white_color"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/ic_resa_logo"
            android:padding="15dp"/>

    </LinearLayout>
</RelativeLayout>
